--- a/src/main/resources/theme/trip-planner/login/messages/messages_en.properties
+++ b/src/main/resources/theme/trip-planner/login/messages/messages_en.properties
@@ -10,3 +10,4 @@ aboutKDK=Learn more about the KDK
 legalNotice=Legal notice
 dataPolicy=Data policy
 logoutOtherSessions=Close all sessions
+username=Username or Email
